- align corrected

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
 
 body, input[type="text"], button {
   color: #888;
-  font-family: Cambria, Georgia;
+  font-family: Cambria, Georgia, serif;
 }
 
 /* everywhere else */
